--- a/Suaah/Areas/Admin/Views/Airlines/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Airlines/Index.cshtml
@@ -29,11 +29,10 @@
 
         <input name="ordersort" id="ord" value="@ViewBag.ordersort" hidden />
         <input name="order" value="@ViewBag.order" hidden />
-     <partial name="_Pagination" />
-
-        <div class="col-1">
-            <input type="submit" class="btn btn-secondary" onclick="go();" />
-        </div>
+     <partial name="_Pag" />
+    </div>
+    <div class="row m-2">
+            <input type="submit" class="btn btn-secondary offset-5 col-2" onclick="go();" />
 
     </div>
     <div class="row m-2">
