--- a/Suaah/Areas/Admin/Views/Airports/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Airports/Index.cshtml
@@ -30,11 +30,11 @@
         <input name="ordersort" id="ord" value="@ViewBag.ordersort" hidden />
         <input name="order" value="@ViewBag.order" hidden />
 
-     <partial name="_Pagination" />
+     <partial name="_Pag" />
 
-        <div class="col-1">
-            <input type="submit" class="btn btn-secondary" onclick="go();" />
-        </div>
+    </div>
+        <div class="row m-2">
+            <input type="submit" class="btn btn-secondary offset-5 col-2" onclick="go();" />
 
     </div>
     <div class="row m-2">
