--- a/Suaah/Areas/Admin/Views/FlightClasses/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/FlightClasses/Index.cshtml
@@ -18,9 +18,9 @@
         <input name="name" class="form-control" value="@ViewBag.name" />
     </div>
     <input name="order" id="ord" value="@ViewBag.order" hidden/>
-     <partial name="_Pagination" />
+     <partial name="_Pag" />
 
-    <div class="offset-1 col-1">
+    <div class="col-1">
         <input type="submit" class="btn btn-secondary" onclick="go();"/>
         </div>
     
