--- a/Suaah/Areas/Admin/Views/Countries/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Countries/Index.cshtml
@@ -21,11 +21,9 @@
             <input name="name" class="form-control" value="@ViewBag.name" />
         </div>
         <input name="order" id="ord" value="@ViewBag.order" hidden />
-     <partial name="_Pagination" />
+     <partial name="_Pag" />
 
-        <div class="offset-1 col-1">
-            <input type="submit" class="btn btn-secondary" onclick="go();" />
-        </div>
+            <input type="submit" class="btn btn-secondary col-2 " onclick="go();" />
 
     </div>
     <div class="row m-2">
