--- a/Suaah/Areas/Admin/Views/FlightClasses/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/FlightClasses/Index.cshtml
@@ -4,12 +4,18 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="row">
+<h1 class="text-center bg-black m-2 p-3 text-white col-12">Flight Classes</h1>
+</div>
+@if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Manager))
+{
+<div class="row m-2">
+        <a class="btn btn-danger col-12" asp-action="Create">Create New Class</a>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<form method="get" asp-action="Index">
+</div>
+
+}
+<form method="get" asp-action="Index" class="m-1">
 <div class="row">
     <div class="col-1">
         <label class="control-label">Search</label>
