--- a/Suaah/Areas/Admin/Views/Countries/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/Countries/Index.cshtml
@@ -5,14 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="row">
+<h1 class="text-center bg-black m-2 p-3 text-white col-12">Countries</h1>
+</div>
 @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Manager))
 {
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
+<div class="row m-2">
+        <a class="btn btn-danger col-12" asp-action="Create">Create New Country</a>
+
+</div>
+
 }
-<form method="get" asp-action="Index">
+<form method="get" asp-action="Index" class="m-1">
     <div class="row">
         <div class="col-1">
             <label class="control-label">Search</label>
