--- a/Suaah/Areas/Admin/Views/FlightBookingHeaders/Index.cshtml
+++ b/Suaah/Areas/Admin/Views/FlightBookingHeaders/Index.cshtml
@@ -5,8 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
-<form asp-action="index" method="get">
+<div class="row">
+<h1 class="text-center bg-black m-2 p-3 text-white col-12">Flights Booked</h1>
+</div>
+
+<form asp-action="index" method="get" class="m-1">
     <div class="row">
         <div class="col-3"><h3>Stauts</h3></div>
         <div class="col-3"><h3>Time</h3></div>
