--- a/Suaah/Areas/Admin/Views/Hotels/Details.cshtml
+++ b/Suaah/Areas/Admin/Views/Hotels/Details.cshtml
@@ -31,6 +31,14 @@
                     </div>
                     <div class="row my-1">
                         <div class="col-3">
+                            <h4 class="card-subtitle mb-2 text-muted d-inline">Country:</h4>
+                        </div>
+                        <div class="col-9">
+                            <p class="card-text d-inline f"> @Html.DisplayFor(model => model.Country.Name)</p> <br /><br />
+                        </div>
+                    </div> 
+                    <div class="row my-1">
+                        <div class="col-3">
                             <h4 class="card-subtitle mb-2 text-muted d-inline">Address:</h4>
                         </div>
                         <div class="col-9">
