--- a/Suaah/Areas/Admin/Views/Airlines/Details.cshtml
+++ b/Suaah/Areas/Admin/Views/Airlines/Details.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Country)
+            @Html.DisplayNameFor(model => model.CountryId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Country)
+            @Html.DisplayFor(model => model.Country.Name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
