update flight summary

--- a/Suaah/Areas/Customer/Views/Home/Index.cshtml
+++ b/Suaah/Areas/Customer/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="text-center">
     <h1 class="display-4 m-4">Enjoy With Us</h1>
-
+    <h2 class="display-4 m4 text-white bg-danger">@TempData["check"]</h2>
      <h4 class="display-4 m-2" style="text-align:center">The most visited Locations in Our Website</h4>
 <div class="row text-center">
     @foreach (var item in Model.flightsCountries)
