--- a/Suaah/Areas/Admin/Views/Customers/Users.cshtml
+++ b/Suaah/Areas/Admin/Views/Customers/Users.cshtml
@@ -39,7 +39,7 @@
         </div>
 
         <div class="row m-3">
-            <div class="col-5">
+            <div class="col-5 mx-5">
                 <partial name="_Pagination" />
             </div>
         </div>
