--- a/Suaah/Areas/Customer/Views/HotelBookings/Create.cshtml
+++ b/Suaah/Areas/Customer/Views/HotelBookings/Create.cshtml
@@ -10,15 +10,16 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>HotelBooking</h4>
+<div class="text-center  m-2 mt-5 p-5 h">
+    <h1>Create Hotel Booking</h1>
+</div>
 <hr />
+
+ 
 <div class="row">
-    <div class="col-md-4">
+<div class="col-md-8 m-auto">
         <form asp-action="Create">
-
-
+ 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Manager))
             {
@@ -63,16 +64,13 @@
                 <select asp-for="HotelRoomId" class="form-control" asp-items="ViewBag.roomId"></select>
             </div>
             
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group m-3 p-3">
+                <input type="submit" value="Create" class="btn btn-primary" /> ||  <a asp-action="Index" class="btn btn-outline-primary">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{
